<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragment.MyAccountFragment">

    <ImageView
        android:id="@+id/myAccountProfileImage"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_icon" />

    <LinearLayout
        android:id="@+id/personal_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myAccountProfileImage"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:padding="3dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_margin="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/linear_details"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/nameLayout"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name__"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/reddish"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/full_name"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:id="@+id/addressName"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mobileLayout"
                        android:orientation="horizontal"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile_no_"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/reddish"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/mobile_no___"
                            android:textColor="@color/black"
                            android:id="@+id/addressMobile"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/addressLayout"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:orientation="horizontal"
                        android:padding="4dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_address"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/reddish"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/address_"
                            android:textColor="@color/black"
                            android:id="@+id/addressAddress"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ButtonLayout"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:padding="4dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="10dp">

                        <Button
                            android:id="@+id/back"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:background="@drawable/slider_background"
                            android:backgroundTint="@color/reddish"
                            android:text="@string/cancel"
                            android:layout_marginEnd="10dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textSize="12sp"
                            android:text="@string/edit"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/slider_background"
                            android:backgroundTint="@color/reddish"
                            android:textColor="@color/colorAccent"
                            android:id="@+id/editAddress"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="40dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/linear_details">
                    <TextView
                        android:id="@+id/my_account_privacy_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:padding="1dp"
                        android:layout_margin="2dp"
                        android:layout_gravity="end"/>

                    <TextView
                        android:id="@+id/my_account_developer_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer_contacts"
                        android:layout_gravity="end"
                        android:padding="1dp"
                        android:layout_margin="1dp"/>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>




</RelativeLayout>