<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/hori_lay">

        <ImageView
            android:id="@+id/productCardImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/image_preview"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/productCardName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:maxLines="2"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/productCardCuttedPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_cutted_price"
                android:textStyle="normal"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginStart="5dp"
                android:textColor="#ff0000" />
            <TextView
                android:id="@+id/productCardPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textSize="16sp"
                android:textStyle="normal"
                android:layout_marginStart="5dp"
                android:textColor="#008e00" />
            <TextView
                android:id="@+id/productCardDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/product_details"
                android:maxLines="3"
                android:textStyle="normal"
                android:layout_marginStart="5dp"
                android:textColor="@android:color/darker_gray" />
            <TextView
                android:id="@+id/productCardRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rating"
                android:textStyle="normal"
                android:layout_marginStart="5dp"
                android:textColor="@android:color/black"
                app:drawableEndCompat="@drawable/ic_star" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/separatorline"
        app:tint="@android:color/darker_gray" />

</LinearLayout>

